--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
           <div class="form-group">
             <label for="input_email">Email address</label>
             <input type="email" class="form-control" id="input_email" aria-describedby="email_help", placeholder="name@example.com">
-            <small id="email_help" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <small id="email_help" class="form-text text-muted">Twoj adres email nie zostanie nikomu udostepniony.</small>
           </div>
         </div>
         <div class="col">
